--- a/dust.html
+++ b/dust.html
@@ -42,26 +42,30 @@
 <body>
     <button id="returnButton">Return to Room</button>
     <script>
-        let backgroundImage;
+        let shelf;
         let dustBunnyImages = [];
         let dustBunnies = [];
 
         let duster;
+        let dusterSize;
+        let dusterDir = 1;
         let dusterAngle = 0;
         let dusterAngleDirection = 1;
         let dusterMaxAngle = 0.3; // max angle for fanning motion
         let dusterAngleSpeed = 0.03; // speed of angle change
 
-        const num = 50;
-        const noiseScale = 0.01;
+        const num = 10;
+        let noiseScale = 0.01;
         let radius;
         let bunnySize;
-        let dusterSize;
-        let dusterDir = 1;
+
+        let scale;
+        let width;
+        let height;
 
         // Preload all images
         function preload() {
-            backgroundImage = loadImage('sprites/miniGames/shelf.png');
+            shelf = loadImage('sprites/miniGames/shelf.png');
             for (let i = 0; i < num; i++) {
                 dustBunnyImages.push(loadImage("sprites/enemies/dustBunny.png"));
             }
@@ -73,9 +77,15 @@
         // and radius of suck according to the size of the window
         function setup() {
             frameRate(60);
-            canvas = createCanvas(backgroundImage.width, backgroundImage.height);
-            let canvasX = (windowWidth - backgroundImage.width) / 2;
-            let canvasY = (windowHeight - backgroundImage.height) / 2;
+
+            scale = Math.min(windowWidth / shelf.width, windowHeight / shelf.height);
+
+            let canvasX = (windowWidth / 2) - (shelf.width / 2) * scale;
+            let canvasY = (windowHeight / 2) - (shelf.height / 2) * scale;
+            width = shelf.width * scale;
+            height = shelf.height * scale;
+
+            canvas = createCanvas(width, height);
             canvas.position(canvasX, canvasY);
 
             for (let i = 0; i < num; i++) {
@@ -83,9 +93,10 @@
             }
             stroke(0, 128, 128);
             noiseSeed(1);
-            bunnySize = 150;
-            dusterSize = 200;
-            radius = 350;
+            bunnySize = 150 * scale;
+            dusterSize = 200 * scale;
+            radius = 350 * scale;
+            noiseScale = 0.01 * scale;
 
             mouseX = windowWidth / 2;
             mouseY = windowHeight / 2;
@@ -94,22 +105,32 @@
         }
 
         function windowResized() {
-            let canvasX = (windowWidth - backgroundImage.width) / 2;
-            let canvasY = (windowHeight - backgroundImage.height) / 2;
+            scale = Math.min(windowWidth / shelf.width, windowHeight / shelf.height);
+            let canvasX = (windowWidth / 2) - (shelf.width / 2) * scale;
+            let canvasY = (windowHeight / 2) - (shelf.height / 2) * scale;
+            width = shelf.width * scale;
+            height = shelf.height * scale;
+
+            resizeCanvas(width, height);
             canvas.position(canvasX, canvasY);
+
+            bunnySize = 150 * scale;
+            dusterSize = 200 * scale;
+            radius = 350 * scale;
+
             updateButtonPosition();
         }
 
         function updateButtonPosition() {
-            let canvasX = (windowWidth - backgroundImage.width) / 2;
-            let canvasY = (windowHeight - backgroundImage.height) / 2;
+            let canvasX = (windowWidth / 2) - (shelf.width / 2) * scale;
+            let canvasY = (windowHeight / 2) - (shelf.height / 2) * scale;
             let button = document.getElementById('returnButton');
-            button.style.left = `${canvasX + backgroundImage.width / 2}px`;
-            button.style.top = `${canvasY + backgroundImage.height / 2 + 230}px`; // 50px offset for visual adjustment
+            button.style.left = `${canvasX + shelf.width / 2 * scale}px`;
+            button.style.top = `${canvasY + shelf.height / 2 + 230 * scale}px`;
         }
 
         function draw() {
-            background(backgroundImage); // set the background every frame
+            background(shelf); // set the background every frame
 
             // makes the screen look dirty until all dust bunnies are sucked up
             fill(100, 50, 0, 150 * dustBunnies.length / num);
@@ -120,20 +141,20 @@
                 push();
                 rotate(45);
                 imageMode(CENTER);
-                image(duster, backgroundImage.width / 2 + 100, backgroundImage.height / 2 - 950);
+                image(duster, width / 2 + 100 * scale, height / 2 - 950 * scale, duster.width * scale, duster.height * scale);
                 pop();
 
-                sizeOfText = 180;
+                sizeOfText = 180 * scale;
                 textSize(sizeOfText);
                 textStyle(BOLD);
                 textAlign(CENTER);
                 textFont('Papyrus');
                 fill(0);
-                text("All Clean!", backgroundImage.width / 2 + 10, backgroundImage.height / 2);
-                text("All Clean!", backgroundImage.width / 2 - 10, backgroundImage.height / 2);
+                text("All Clean!", width / 2 + 10 * scale, height / 2);
+                text("All Clean!", width / 2 - 10 * scale, height / 2);
 
                 fill(255);
-                text("All Clean!", backgroundImage.width / 2, backgroundImage.height / 2);
+                text("All Clean!", width / 2, height / 2);
 
                 document.getElementById("returnButton").style.display = "block";
 
@@ -145,7 +166,7 @@
                     let n = noise(bunny.x * noiseScale, bunny.y * noiseScale);
                     let a = TAU * n;
                     // bunny in range
-                    if (dist(bunny.x, bunny.y, mouseX, mouseY - 300) <= radius) {
+                    if (dist(bunny.x, bunny.y, mouseX, mouseY - 300 * scale) <= radius) {
                         // make the bunny go away from the duster
                         let directionX = mouseX - bunny.x;
                         let directionY = mouseY - bunny.y;
@@ -160,7 +181,7 @@
                         pop();
                     }
                     // bunny just outside of range
-                    else if (dist(bunny.x, bunny.y, mouseX, mouseY - 300) < radius + 5) {
+                    else if (dist(bunny.x, bunny.y, mouseX, mouseY - 300 * scale) < radius + 5 * scale) {
                         // spin the bunnies
                         push();
                         translate(bunny.x, bunny.y);
@@ -189,9 +210,9 @@
                     dusterAngleDirection *= -1;
                 }
                 push();
-                translate(mouseX, mouseY + dusterSize * 1.75 - 100); // Adjusting the pivot point to the bottom
+                translate(mouseX, mouseY + dusterSize * 1.75 - 100 * scale); // Adjusting the pivot point to the bottom
                 rotate(dusterAngle);
-                image(duster, -dusterSize / 3.5 - 60, -dusterSize * 3.5 - 160, dusterSize * 1.7, dusterSize * 3.5); // Position image relative to the new pivot
+                image(duster, -dusterSize / 3.5 - 60 * scale, -dusterSize * 3.5 - 160 * scale, dusterSize * 1.7, dusterSize * 3.5); // Position image relative to the new pivot
                 pop();
             }
             else {
@@ -209,7 +230,7 @@
                     bunny.y += sin(a);
 
                     image(bunnyImage, bunny.x - bunnySize / 2, bunny.y - bunnySize / 2, bunnySize, bunnySize);
-                    image(duster, mouseX - dusterSize * 1.7 / 2, mouseY - dusterSize * 3.5 + 100, dusterSize * 1.7, dusterSize * 3.5);
+                    image(duster, mouseX - dusterSize * 1.7 / 2, mouseY - dusterSize * 3.5 + 100 * scale, dusterSize * 1.7, dusterSize * 3.5);
 
                     // If bunny goes off screen, respawn at a random spot
                     if (!onScreen(bunny)) {
