renamed sprites and started dusterChat

--- a/dust.html
+++ b/dust.html
@@ -22,12 +22,12 @@
             top: 80%;
             left: 50%;
             transform: translate(-50%);
-            padding: 2vh;
-            font-size: 5vh;
+            padding: 2vmin;
+            font-size: 5vmin;
             color: white;
             background-color: black;
             border: none;
-            border-radius: 3vh;
+            border-radius: 3vmin;
             cursor: pointer;
             z-index: 1000;
         }
